--- a/homecheck.css
+++ b/homecheck.css
@@ -102,7 +102,7 @@ h3{
 
 .footer {
    height: 500px;
-   background-image: url("images/homecheckfinal pic.jpeg");
+   background-image: url("homecheckfinal pic.jpeg");
    background-size: cover;
    padding-bottom: 400px;
    padding right: 200px;
